Add additional 10 test cases

--- a/src/main/resources/static/video-test.html
+++ b/src/main/resources/static/video-test.html
@@ -2,113 +2,49 @@
 <html lang="ko">
 <head>
     <meta charset="UTF-8">
-    <title>수어 영상 스트리밍</title>
+    <title>영상 스트리밍 테스트</title>
     <style>
         body {
             font-family: sans-serif;
             padding: 20px;
         }
-
-        h1 {
-            text-align: center;
-        }
-
         .grid-container {
             display: grid;
-            grid-template-columns: repeat(4, 1fr); /* 4개씩 한 줄 */
+            grid-template-columns: repeat(4, 1fr);
             gap: 20px;
         }
-
-        .video-item {
+        .video-box {
             text-align: center;
         }
-
         video {
             width: 100%;
-            height: auto;
             border-radius: 8px;
-            box-shadow: 0 0 5px rgba(0,0,0,0.2);
-        }
-
-        p {
-            margin-top: 8px;
         }
     </style>
 </head>
 <body>
-
-<h1>수어 영상 스트리밍</h1>
-
+<h1>FTP 영상 20개 스트리밍 테스트</h1>
 <div class="grid-container">
-    <div class="video-item">
-        <video controls>
-            <source src="http://localhost:8000/stream/apple.mp4" type="video/mp4">
-        </video>
-        <p>🍎 apple</p>
-    </div>
-
-    <div class="video-item">
-        <video controls>
-            <source src="http://localhost:8000/stream/grape.mp4" type="video/mp4">
-        </video>
-        <p>🍇 grape</p>
-    </div>
-
-    <div class="video-item">
-        <video controls>
-            <source src="http://localhost:8000/stream/watermelon.mp4" type="video/mp4">
-        </video>
-        <p>🍉 watermelon</p>
-    </div>
-
-    <div class="video-item">
-        <video controls>
-            <source src="http://localhost:8000/stream/ramen.mp4" type="video/mp4">
-        </video>
-        <p>🍜 ramen</p>
-    </div>
-
-    <div class="video-item">
-        <video controls>
-            <source src="http://localhost:8000/stream/happy.mp4" type="video/mp4">
-        </video>
-        <p>😊 happy</p>
-    </div>
-
-    <div class="video-item">
-        <video controls>
-            <source src="http://localhost:8000/stream/snack.mp4" type="video/mp4">
-        </video>
-        <p>🍪 snack</p>
-    </div>
-
-    <div class="video-item">
-        <video controls>
-            <source src="http://localhost:8000/stream/refrigerator.mp4" type="video/mp4">
-        </video>
-        <p>🧊 refrigerator</p>
-    </div>
-
-    <div class="video-item">
-        <video controls>
-            <source src="http://localhost:8000/stream/I.mp4" type="video/mp4">
-        </video>
-        <p>👤 I</p>
-    </div>
-
-    <div class="video-item">
-        <video controls>
-            <source src="http://localhost:8000/stream/you.mp4" type="video/mp4">
-        </video>
-        <p>🫵 you</p>
-    </div>
-
-    <div class="video-item">
-        <video controls>
-            <source src="http://localhost:8000/stream/umbrella.mp4" type="video/mp4">
-        </video>
-        <p>☂️ umbrella</p>
-    </div>
+    <div class="video-box"><p>apple</p><video controls src="/stream/apple.mp4"></video></div>
+    <div class="video-box"><p>grape</p><video controls src="/stream/grape.mp4"></video></div>
+    <div class="video-box"><p>watermelon</p><video controls src="/stream/watermelon.mp4"></video></div>
+    <div class="video-box"><p>ramen</p><video controls src="/stream/ramen.mp4"></video></div>
+    <div class="video-box"><p>happy</p><video controls src="/stream/happy.mp4"></video></div>
+    <div class="video-box"><p>snack</p><video controls src="/stream/snack.mp4"></video></div>
+    <div class="video-box"><p>refrigerator</p><video controls src="/stream/refrigerator.mp4"></video></div>
+    <div class="video-box"><p>I</p><video controls src="/stream/I.mp4"></video></div>
+    <div class="video-box"><p>you</p><video controls src="/stream/you.mp4"></video></div>
+    <div class="video-box"><p>umbrella</p><video controls src="/stream/umbrella.mp4"></video></div>
+    <div class="video-box"><p>he</p><video controls src="/stream/he.mp4"></video></div>
+    <div class="video-box"><p>she</p><video controls src="/stream/she.mp4"></video></div>
+    <div class="video-box"><p>outer</p><video controls src="/stream/outer.mp4"></video></div>
+    <div class="video-box"><p>meat</p><video controls src="/stream/meat.mp4"></video></div>
+    <div class="video-box"><p>suit</p><video controls src="/stream/suit.mp4"></video></div>
+    <div class="video-box"><p>sidedish</p><video controls src="/stream/sidedish.mp4"></video></div>
+    <div class="video-box"><p>tv</p><video controls src="/stream/tv.mp4"></video></div>
+    <div class="video-box"><p>toilet</p><video controls src="/stream/toilet.mp4"></video></div>
+    <div class="video-box"><p>know</p><video controls src="/stream/know.mp4"></video></div>
+    <div class="video-box"><p>glasses</p><video controls src="/stream/glasses.mp4"></video></div>
 </div>
 </body>
 </html>
